# ProjectVoxel

./: CMakeLists.txt
assets/shaders/frag/: two_dim_grid.frag  voxel_renderer.frag
include/: Color.h  FileLoader.h  Grid.h  Material.h  Mesh.h  MeshRenderer.h  Plane.h  Shader.h  VoxelLoader.h
src/: FileLoader.cpp  Grid.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  Shader.cpp  main.cpp
